[workspace.package]
version = "0.11.0"
authors = ["Eugene The Dream"]
edition = "2018"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = [
    "contract",
    "integration-tests"
]
