[workspace.package]
version = "0.11.0"
authors = ["Eugene The Dream"]
edition = "2021"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
resolver = "2"
members = [
    "contract",
    "integration-tests"
]
